<resources>
    <string name="app_name">Calculator</string>
    <string name="header_name">Calculator</string>
    <string name="enter_first_number">Enter first number</string>
    <string name="enter_second_number">Enter second number</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="answer">The answer is: </string>

</resources>